--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,15 @@
 {
     "cSpell.ignoreWords": [
-        "Bondi"
+        "Bondi",
+        "Facere",
+        "accusamus",
+        "adipisicing",
+        "amet",
+        "consectetur",
+        "elit",
+        "ipsum",
+        "quibusdam",
+        "recusandae",
+        "voluptate"
     ]
 }
