--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,14 +2,21 @@
     "cSpell.ignoreWords": [
         "Bondi",
         "Facere",
+        "Neque",
         "accusamus",
         "adipisicing",
         "amet",
         "consectetur",
+        "distinctio",
+        "doloremque",
         "elit",
         "ipsum",
+        "optio",
         "quibusdam",
+        "quidem",
         "recusandae",
+        "ullam",
+        "velit",
         "voluptate"
     ]
 }
