--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,33 @@
 {
     "cSpell.ignoreWords": [
+        "Aspernatur",
         "Bondi",
+        "Eveniet",
         "Facere",
         "Neque",
         "accusamus",
+        "adipisci",
         "adipisicing",
         "amet",
+        "blanditiis",
         "consectetur",
+        "deleniti",
         "distinctio",
         "doloremque",
+        "doloribus",
         "elit",
         "ipsum",
+        "numquam",
+        "obcaecati",
         "optio",
+        "porro",
         "quibusdam",
         "quidem",
+        "quisquam",
         "recusandae",
+        "repudiandae",
+        "rerum",
+        "sunt",
         "ullam",
         "velit",
         "voluptate"
